<resources>
    <string name="app_name">DIY</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_learning">Learning</string>
    <string name="menu_knitting_charts">Knitting charts</string>
    <string name="menu_crochet_charts">Crochet charts</string>
    <string name="menu_saved_items">Saved itemsss</string>
    <string name="menu_settings">Settings</string>
    <string name="screen_how_to_do">How To Do</string>
    <string name="retry">Retry</string>
    <string name="no_connection">No connection</string>
</resources>
